# toml-sorted

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
manifests/: issue_2.toml  multiple_dependency_sections.toml
src/: main.rs
tests/: integration.rs
