[package]
name = "toml-sorted"
version = "0.1.0"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gsquire/toml-sorted"
description = "A cargo sub-command to check if various parts of the manifest are sorted"
readme = "README.md"

[dependencies]
structopt = "0.2"
toml = { version = "0.5", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "0.11"
