[package]
name = "toml-sorted"
version = "0.2.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/gsquire/toml-sorted"
description = "A cargo sub-command to check if various parts of the manifest are sorted"
readme = "README.md"

[dependencies]
anyhow = "1"
argh = "0.1"
toml = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2"
